toml-pretty-deser/compilation_failure_tests/alias_enum_conflicts_alias.rs
//! Two different variants sharing the same alias must be a compile error.
use toml_pretty_deser::prelude::*;

#[tpd]
#[derive(Debug)]
enum Color {
    #[tpd(alias = "primary")]
    Red,
    #[tpd(alias = "primary")]
    Blue,
}

fn main() {}
